## meson_options.txt for dinit
## You can set dinit's options in here:

## Please see BUILD_MESON for more information.

## General options
option('shutdown_prefix', type : 'string', value : '',
        description : 'Name prefix for "shutdown", "halt" and "reboot" commands (if they are built).')
option('dinit_control_socket_path', type : 'string', value : '/run/dinitctl',
        description : 'Default full path to the control socket, for when Dinit runs as system service manager.')
option('unit_tests', type : 'feature', value : 'disabled',
       description : 'Building Unit tests. by default its disabled')
option('igr_tests', type : 'feature', value : 'disabled',
        description : 'Building Integration tests. by default its disabled')
option('use_utmpx', type : 'feature', value : 'disabled',
        description : 'Whether to build support for manipulating the utmp/utmpx database via the related POSIX functions.')

## Dinit's special compiler flags
option('use_new_abi', type : 'feature', value : 'auto', 
        description : 'Using new C++11 ABI')

## Linux specific options
option('support_cgroups', type : 'feature', value : 'auto',
        description : 'Enable Cgroups supprot')
option('build_shutdown', type : 'feature', value : 'auto',
        description : 'Building shutdown/reboot/halt or not.')
